@@ -805,6 +805,12 @@ paragraphs, for the purposes of bidirectional display.
 This controls how long Emacs will wait for updates to the graphical
 state to take effect (making a frame visible, for example).
 
+** Internal parsing commands now use syntax-ppss and disregard
+open-paren-in-column-0-is-defun-start.  This affects mostly things like
+forward-comment, scan-sexps, and forward-sexp when parsing backward.
+The new variable 'comment-use-syntax-ppss' can be set to nil to recover the old
+behavior if needed.
+
 ---
 ** The 'file-system-info' function is now available on all platforms.
 instead of just Microsoft platforms.  This fixes a 'get-free-disk-space'
